# AE-Reconstruction-And-Feature-Based-AD

./: .gitignore  Extract_logs.py  FrameworkEvaluate.py  FrameworkEvaluate_DataGen.py  FrameworkTrain.py  HardNet.py  ModelClassification.py  ModelClassificationBase.py  ModelClassificationEnc.py  ModelClassificationErrM.py  ModelClassificationHardNet1.py  ModelClassificationHardNet2.py  ModelClassificationHardNet3.py  ModelClassificationHardNet4.py  ModelClassificationSIFT.py  ModelClassificationSiftSurf.py  ModelDataGenerators.py  ModelEvaluation.py  ModelHelperVAE.py  ModelLayers.py  ModelSaved.py  ModelTrain.py  ModelTrainAndEval.py  ProcessLogJSON.py  ProgramLog.txt  README.md  SplitDatasets.py  classify.py  condaEnvironment.yml  environment.yml  main.py  makeCustomNpz.py  pyproject.toml  requirements.txt  requirements_PIPREQ.txt
.devcontainer/: devcontainer.json  post_create_command.sh
Plankton/: Guinardia_AD.ini
data/: .gitignore
docker/dev/: Dockerfile
init/: Aphanizomenon_AD.ini  Centrales_AD.ini  Chaetocero_AD.ini  Cookies.ini  Dolichospermum_AD.ini  Nodularia_AD.ini  Paulliela_AD.ini  PeridiniellaChain_AD.ini  PeridiniellaSingle_AD.ini  Plankton_All.ini  Skeletonem_AD.ini  Vibrations.ini  bae1.ini  bae2.ini  modelsAll.ini  mvt.ini  vae1.ini  vqvae1.ini
init/Cookies/: Cookies.ini
init/MVTec/: bottle_broken_contamination.ini  bottle_broken_large.ini  carpet_color.ini  carpet_cut.ini  transistor_bent_lead.ini  transistor_cut_lead.ini  wood_color.ini  wood_combined.ini
log_backup/: parsed-all-log_CookieLot.json  parsed-log.json
(+16 files in other folders)
